raise error if all treated or untreated, don't depend on bayesNMF

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,18 +5,19 @@ S3method(plot,causalLFO_result)
 S3method(summary,causalLFO_bootstrap_result)
 S3method(summary,causalLFO_result)
 export(all_data)
+export(assign_factors)
 export(bootstrap_wrapper)
 export(combine_mat)
 export(extract_nmf_info)
 export(impute)
 export(impute_and_stabilize)
 export(nmf_wrapper)
+export(pairwise_sim)
 export(plot_causalLFO_bootstrap_results)
 export(plot_causalLFO_results)
 export(poisson_nnlm)
 export(random_split)
 export(stabilize)
 import(NMF)
-import(bayesNMF)
 import(ggplot2)
 import(glue)
